
pkgincludedir = $(includedir)/QtLua
pkginclude_HEADERS = \
	Function qtluafunction.hh qtluafunction.hxx \
	Console qtluaconsole.hh qtluaconsole.hxx \
	Item qtluaitem.hh qtluaitem.hxx	\
	ItemModel qtluaitemmodel.hh \
	Iterator qtluaiterator.hh qtluaiterator.hxx \
	ListItem qtlualistitem.hh qtlualistitem.hxx \
	Plugin qtluaplugin.hh qtluaplugin.hxx \
	PluginInterface qtluaplugininterface.hh \
	State qtluastate.hh qtluastate.hxx \
	UserData qtluauserdata.hh qtluauserdata.hxx \
	Value qtluavalue.hh qtluavalue.hxx \
	ValueRef qtluavalueref.hh qtluavalueref.hxx \
	Ref qtluaref.hh \
	String qtluastring.hh qtluastring.hxx \
	QHashProxy qtluaqhashproxy.hh qtluaqhashproxy.hxx \
	QVectorProxy qtluaqvectorproxy.hh qtluaqvectorproxy.hxx \
	QListProxy qtluaqlistproxy.hh qtluaqlistproxy.hxx \
	QLinkedListProxy qtluaqlinkedlistproxy.hh qtluaqlinkedlistproxy.hxx

