
noinst_HEADERS = Enum ListIterator Makefile.am Member MetaCache Method		\
	qtluaenum.hh qtluaenum.hxx qtlualistiterator.hh qtluamember.hh		\
	qtluamember.hxx qtluametacache.hh qtluametacache.hxx qtluamethod.hh	\
	qtluamethod.hxx qtluatableiterator.hh TableIterator QObjectIterator	\
	qtluaqobjectiterator.hh EnumIterator qtluaenumiterator.hh		\
	qtluaproperty.hh Property \
	QMetaObjectWrapper qtluaqmetaobjectwrapper.hh \
	QObjectWrapper qtluaqobjectwrapper.hh qtluaqobjectwrapper.hxx

