
include $(top_srcdir)/build/autotroll.mk

noinst_PROGRAMS = qmapproxy_string qhashproxy_value		\
		  qvectorproxy_string qvectorproxy_userdata	\
		  qlistproxy_string qlinkedlistproxy_string

qmapproxy_string_SOURCES = qmapproxy_string.cc
qmapproxy_string_CXXFLAGS = $(QT_CXXFLAGS) $(AM_CXXFLAGS)
qmapproxy_string_CPPFLAGS = $(QT_CPPFLAGS) $(AM_CPPFLAGS) -I$(top_srcdir)/src
qmapproxy_string_LDFLAGS  = $(QT_LDFLAGS) $(LDFLAGS) $(libtool_flags)
qmapproxy_string_LDADD   = $(QT_LIBS) $(LDADD) $(top_builddir)/src/libqtlua.la

qhashproxy_value_SOURCES = qhashproxy_value.cc
qhashproxy_value_CXXFLAGS = $(QT_CXXFLAGS) $(AM_CXXFLAGS)
qhashproxy_value_CPPFLAGS = $(QT_CPPFLAGS) $(AM_CPPFLAGS) -I$(top_srcdir)/src
qhashproxy_value_LDFLAGS  = $(QT_LDFLAGS) $(LDFLAGS) $(libtool_flags)
qhashproxy_value_LDADD   = $(QT_LIBS) $(LDADD) $(top_builddir)/src/libqtlua.la

qvectorproxy_string_SOURCES = qvectorproxy_string.cc
qvectorproxy_string_CXXFLAGS = $(QT_CXXFLAGS) $(AM_CXXFLAGS)
qvectorproxy_string_CPPFLAGS = $(QT_CPPFLAGS) $(AM_CPPFLAGS) -I$(top_srcdir)/src
qvectorproxy_string_LDFLAGS  = $(QT_LDFLAGS) $(LDFLAGS) $(libtool_flags)
qvectorproxy_string_LDADD   = $(QT_LIBS) $(LDADD) $(top_builddir)/src/libqtlua.la

qvectorproxy_userdata_SOURCES = qvectorproxy_userdata.cc
qvectorproxy_userdata_CXXFLAGS = $(QT_CXXFLAGS) $(AM_CXXFLAGS)
qvectorproxy_userdata_CPPFLAGS = $(QT_CPPFLAGS) $(AM_CPPFLAGS) -I$(top_srcdir)/src
qvectorproxy_userdata_LDFLAGS  = $(QT_LDFLAGS) $(LDFLAGS) $(libtool_flags)
qvectorproxy_userdata_LDADD   = $(QT_LIBS) $(LDADD) $(top_builddir)/src/libqtlua.la

qlistproxy_string_SOURCES = qlistproxy_string.cc
qlistproxy_string_CXXFLAGS = $(QT_CXXFLAGS) $(AM_CXXFLAGS)
qlistproxy_string_CPPFLAGS = $(QT_CPPFLAGS) $(AM_CPPFLAGS) -I$(top_srcdir)/src
qlistproxy_string_LDFLAGS  = $(QT_LDFLAGS) $(LDFLAGS) $(libtool_flags)
qlistproxy_string_LDADD   = $(QT_LIBS) $(LDADD) $(top_builddir)/src/libqtlua.la

qlinkedlistproxy_string_SOURCES = qlinkedlistproxy_string.cc
qlinkedlistproxy_string_CXXFLAGS = $(QT_CXXFLAGS) $(AM_CXXFLAGS)
qlinkedlistproxy_string_CPPFLAGS = $(QT_CPPFLAGS) $(AM_CPPFLAGS) -I$(top_srcdir)/src
qlinkedlistproxy_string_LDFLAGS  = $(QT_LDFLAGS) $(LDFLAGS) $(libtool_flags)
qlinkedlistproxy_string_LDADD   = $(QT_LIBS) $(LDADD) $(top_builddir)/src/libqtlua.la

#BUILT_SOURCES = 

